--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
 </head>
 <body >
+    <div id="loader"></div>
     <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
@@ -233,6 +234,7 @@
 </div>    
 
     
+<script src="js/helpers.js" type="text/javascript"></script>
 <script src="js/app.js" type="text/javascript"></script>
 <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfuQm0olWCGhBSgShTtHzJHbHde9Es-KE"></script>
 </body>
