--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
 </div>      
 
 <script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfuQm0olWCGhBSgShTtHzJHbHde9Es-KE"></script>
-<script src="https://digitallearningsolutions.com.au/ESxAPI/js/helpers.js?v=Az9sdfphAc" type="text/javascript"></script>
-<script src="https://digitallearningsolutions.com.au/ESxAPI/js/app.js?v=Az9jsfddc" type="text/javascript"></script>
+<script src="https://digitallearningsolutions.com.au/ESxAPI/js/helpers.js?v=Az9345fphAc" type="text/javascript"></script>
+<script src="js/app.js?v=wertwefzxc" type="text/javascript"></script>
 </body>
 
 
